--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -5,15 +5,40 @@
     bottom: 0px;
     width: 100%;
     font-size: 20px;
+    font-weight: 300;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-between;
+    background-color: #0B0E11;
+
+    a::after {
+        position: absolute;
+        content: "";
+        width: 100%;
+        color: #ecf0f1;
+        height: 3px;
+        top: 100%;
+        left: 0;
+        transition: transform 0.5s;
+        transform: scaleX(0);
+        transform-origin: right;
+        background: -webkit-linear-gradient(right,#F652A0,#36EEE0);
+        background: linear-gradient(270deg,#F652A0 0,#36EEE0);
+        background-size: 350%;
+        -webkit-animation: gradientText 3s ease infinite;
+        animation: gradientText 3s ease infinite;
+      }
+      
+      a:hover::after {
+        transform: scaleX(1);
+        transform-origin: left;
+      }
 }
 
 .status {
     display: flex;
-    align-items:center;
+    align-items: center;
 }
 
 #status-icon {
@@ -25,11 +50,22 @@
 }
 
 .commit {
-    align-items:center;
+    align-items: center;
     display: flex;
     font-family: 'Poppins', sans-serif;
-    .at {
-        margin-left: 0.25rem;
-        margin-right: 0.25rem;
+
+    i {
+        margin-right: 0.5rem;
+    }
+
+    .version-v {
+        margin-left: 1.25rem;
     }
 }
+
+
+@media screen and (max-width: 900px) {
+    #spotify {
+        display: none;
+    }
+  }
