--- a/src/assets/scss/_dribbble-shots.scss
+++ b/src/assets/scss/_dribbble-shots.scss
@@ -1,15 +1,10 @@
-h2 {
-    font-weight: 700;
-    padding-top: 2.25rem;
-}
-
-.git-repos {
+.dribbble-shots {
     margin: auto;
     width: 80vw;
     font-weight: 300;
 }
 
-.git-container {
+.dribbble-container {
     display: flex;
     flex-wrap: wrap;
     margin-left: -1.5rem;
@@ -17,7 +12,7 @@ h2 {
     padding-bottom: 5rem;
 }
 
-.git-item {
+.dribbble-item {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
     width: 50%;
@@ -27,53 +22,29 @@ h2 {
     box-sizing: border-box;
 }
 
-.git-item-container {
+.dribbble-item-container {
     min-height: 10rem;
     background-color: #141a20;
     padding: 1.25rem;
     border-radius: 1.25rem;
     position: relative;
+
+    img {
+        max-width: 100%;
+        max-height: 100%;
+        border-radius: 0.25rem;
+    }
 }
 
-.git-title {
+.dribbble-title {
     font-weight: 500;
 }
 
-.git-description {
-    margin-bottom: 2.5rem;
-    margin-top: 0.5rem;
-}
-
-.git-lang {
-    margin: 1.25rem;
-    left: 0;
-    bottom: 0;
-    display: flex;
-    position: absolute;
-    padding: auto;
-
-    i {
-        margin-right: 0.3rem;
-    }
-}
-
-.git-stars {
-    margin: 1.25rem;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    position: absolute;
-
-    i {
-        margin-left: 0.3rem;
-    }
-}
-
 @media screen and (max-width: 900px) {
-    .git-container {
+    .dribbble-container {
         flex-direction: column;
     }
-    .git-item {
+    .dribbble-item {
         width: 100%;
     }
     h2 {
