:sparkles: add light mode

--- a/src/assets/scss/_dribbble-shots.scss
+++ b/src/assets/scss/_dribbble-shots.scss
@@ -24,7 +24,7 @@
 
 .dribbble-item-container {
     min-height: 10rem;
-    background-color: #141a20;
+    background-color: var(--background2);
     padding: 1.25rem;
     border-radius: 1.25rem;
     position: relative;
