--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -1,36 +1,83 @@
+.mode-toggle {
+  display: flex;
+  position: fixed;
+  top: 2rem;
+  right: 2.5rem;
+  z-index: 2;
+  cursor: pointer;
+}
+
+.mode-icon{
+  width: 2rem;
+  height: 2rem;
+}
+
 .hero-container {
-    position: absolute;
-    text-align: center;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  text-align: center;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .hero {
     height: 100%;
 }
 
+.text {
+  background: -webkit-linear-gradient(right,var(--accent1),var(--accent2));
+  background: linear-gradient(270deg,var(--accent1) 0,var(--accent2));
+  background-size: 350%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-animation: gradientText 3s ease infinite;
+  animation: gradientText 3s ease infinite;
+  font-size: 4rem;
+}
+
+.normal {
+  color: transparent;
+  -webkit-text-stroke: 0.8px var(--text);
+  font-size: 4rem;
+}
+
+@keyframes gradientText {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+
 .socialmedia {
-    font-size: 25px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  font-size: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .socialmedia i{
-    padding: 10px;
-    border-radius: 50px;
-    width: 26px;
-    height: 26px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  padding: 10px;
+  border-radius: 50px;
+  width: 26px;
+  height: 26px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.socialmedia i:hover {
-    background: -webkit-linear-gradient(right,#F652A0,#36EEE0);
-    background: linear-gradient(270deg,#F652A0 0,#36EEE0);
+@media screen and (min-width: 900px) {
+  .socialmedia i:hover {
+    background: -webkit-linear-gradient(right,var(--accent1),var(--accent2));
+    background: linear-gradient(270deg,var(--accent1) 0,var(--accent2));
     background-size: 350%;
     -webkit-animation: gradientText 3s ease infinite;
     animation: gradientText 3s ease infinite;
+    color: #FFFFFF;
+}
 }
