--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,6 +2,7 @@
 @import 'fonts';
 @import 'normalize';
 @import 'footer';
+@import 'bar';
 @import 'hero';
 @import 'git-repos';
 @import 'icon-scroll';
