--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -1,73 +1,16 @@
 .footer {
-    position: fixed;
-    padding: 1rem;
-    box-sizing: border-box;
-    bottom: 0px;
-    width: 100%;
-    font-size: 20px;
-    font-weight: 300;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
     background-color: var(--background1);
+    padding: 1rem;
+    padding-top: 2.25rem;
+    position: relative;
+    width: 50%;
+    font-size: 20px;
+    box-sizing: border-box;
 }
-
-.status {
-    display: flex;
-    align-items: center;
-}
-
-#status-icon {
-    padding: 0.375rem;
-}
-
-#spotify {
-    margin-left: 1.25rem;
-}
-
-.commit {
-    align-items: center;
-    display: flex;
-    font-family: 'Poppins', sans-serif;
-
-    i {
-        margin-right: 0.5rem;
-    }
-
-    .version-v {
-        margin-left: 1.25rem;
-    }
-}
-
 
 @media screen and (max-width: 900px) {
-    #spotify {
-        display: none;
-    }
-  }
-
-  @media screen and (min-width: 900px) {
-    .footer a::after {
-        position: absolute;
-        content: "";
+    .footer {
         width: 100%;
-        color: #ecf0f1;
-        height: 3px;
-        top: 100%;
-        left: 0;
-        transition: transform 0.5s;
-        transform: scaleX(0);
-        transform-origin: right;
-        background: -webkit-linear-gradient(right,var(--accent1),var(--accent2));
-        background: linear-gradient(270deg,var(--accent1) 0,var(--accent2));
-        background-size: 350%;
-        -webkit-animation: gradientText 3s ease infinite;
-        animation: gradientText 3s ease infinite;
-      }
-      
-    .footer a:hover::after {
-        transform: scaleX(1);
-        transform-origin: left;
-      }
+        font-size: 16px;
+    }
   }
