--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -5,6 +5,11 @@
   right: 2.5rem;
   z-index: 2;
   cursor: pointer;
+  transition: all 0.3s;
+}
+
+.mode-toggle:hover {
+  transform: scale(1.08);
 }
 
 .mode-icon{
@@ -61,7 +66,7 @@
   justify-content: center;
 }
 
-.socialmedia i{
+.socialmedia a{
   padding: 10px;
   border-radius: 50px;
   width: 26px;
@@ -69,10 +74,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: all 0.3s;
 }
 
 @media screen and (min-width: 900px) {
-  .socialmedia i:hover {
+  .socialmedia a:hover {
     background: -webkit-linear-gradient(right,var(--accent1),var(--accent2));
     background: linear-gradient(270deg,var(--accent1) 0,var(--accent2));
     background-size: 350%;
