--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -43,7 +43,7 @@
 
 .normal {
   color: transparent;
-  -webkit-text-stroke: 0.8px var(--text);
+  -webkit-text-stroke: 0.8px var(--text1);
   font-size: 4rem;
 }
 
