--- a/src/assets/scss/_icon-scroll.scss
+++ b/src/assets/scss/_icon-scroll.scss
@@ -8,7 +8,7 @@
     height: 50px;
     margin-left: -20px;
     bottom: -14rem;
-    border: 2px solid var(--text);
+    border: 2px solid var(--text1);
     border-radius: 25px;
     position: relative;
 }
@@ -22,7 +22,7 @@
     content: '';
     width: 8px;
     height: 8px;
-    background: var(--text);
+    background: var(--text1);
     margin-left: -4px;
     top: 8px;
     border-radius: 4px;
