--- a/src/assets/scss/_var.scss
+++ b/src/assets/scss/_var.scss
@@ -1,10 +1,11 @@
 html {
     --accent1: #F652A0;
     --accent2: #36EEE0;
-    --background1: #0B0E11;
-    --background2: #141a20;
+    --background1: #111217;
+    --background2: #15171D;
     --background3: #242f38;
-    --text: #F4F6FB;
+    --text1: #F4F6FB;
+    --text2: #d1d1d1;
 }
 
 .lightmode {
@@ -13,5 +14,6 @@ html {
     --background1: #F4F6FB;
     --background2: #ffffff;
     --background3: #d8d8d8;
-    --text: #0B0E11;
+    --text1: #111217;
+    --text2: #1b1d24;
 }
