--- a/src/assets/scss/_dribbble-shots.scss
+++ b/src/assets/scss/_dribbble-shots.scss
@@ -57,8 +57,8 @@
 
   @media screen and (min-width: 900px) {
     .dribbble-item-container:hover {
-        box-shadow: 0 1rem 2rem var(--background2);
-        transform: scale(1.05);
+        box-shadow: 6px 10px 19px 0px rgba(0,0,0,0.4);
+        transform: scale(1.03);
     }
     
     .dribbble-item-container:active {
