--- a/src/assets/scss/_globals.scss
+++ b/src/assets/scss/_globals.scss
@@ -51,11 +51,11 @@ h2 {
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: var(--background2); 
+  background: var(--scrollbar); 
   border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--background3); 
+  background: var(--scrollbar-hover); 
 }
