--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -1,11 +1,19 @@
 .mode-toggle {
   display: flex;
   position: fixed;
-  top: 2rem;
-  right: 2.5rem;
   z-index: 2;
   cursor: pointer;
   transition: all 0.3s;
+}
+
+#theme {
+  top: 2rem;
+  right: 2.5rem;
+}
+
+#color {
+  top: 2rem;
+  left: 2rem;
 }
 
 .mode-toggle:hover {
@@ -77,7 +85,7 @@
   justify-content: center;
   transition: all 0.3s;
   color: #F4F6FB;
-  box-shadow: 0px 3px 13px 3px #F652A04d;
+  box-shadow: 0px 3px 13px 3px var(--btn-primary-shadow);
   background: var(--accent1);
 }
 
