--- a/src/assets/scss/_var.scss
+++ b/src/assets/scss/_var.scss
@@ -16,8 +16,6 @@ html {
 }
 
 .lightmode {
-    --accent1: #F652A0;
-    --accent2: #36EEE0;
     --background1: #F4F6FB;
     --background2: #ffffff;
     --background3: #f4f6fbda;
@@ -26,8 +24,34 @@ html {
     --text2: #1b1d24;
     --scrollbar: #111217a9;
     --scrollbar-hover: #1b1d24;
-    --btn-primary-bg: #F652A0;
-    --btn-primary-shadow: #F652A04d;
     --btn-secondary-bg: #111217a9;
     --btn-secondary-shadow: #1112174d;
+}
+
+.theme1 {
+    --accent1: #F652A0;
+    --accent2: #36EEE0;
+    --btn-primary-bg: #F652A0;
+    --btn-primary-shadow: #F652A04d;
+}
+
+.theme2 {
+    --accent1: #F9063B;
+    --accent2: #F9A90D;
+    --btn-primary-bg: #F9063B;
+    --btn-primary-shadow: #F9063B4d;
+}
+
+.theme3 {
+    --accent1: #2F06F9;
+    --accent2: #DB06D6;
+    --btn-primary-bg: #2F06F9;
+    --btn-primary-shadow: #2F06F94d;
+}
+
+.theme4 {
+    --accent1: #F3064B;
+    --accent2: #2F06F9;
+    --btn-primary-bg: #F3064B;
+    --btn-primary-shadow: #F3064B4d;
 }
