--- a/src/assets/scss/_about.scss
+++ b/src/assets/scss/_about.scss
@@ -43,7 +43,8 @@
         .about-text {
             color: var(--text2);
             width: 100%;
-            font-size: 16px;
+            font-size: 18px;
+            text-align: justify;
         }
 
         img {
