--- a/src/assets/scss/_var.scss
+++ b/src/assets/scss/_var.scss
@@ -21,7 +21,7 @@ html {
     --background3: #f4f6fbda;
     --background4: #ffffffda;
     --text1: #111217;
-    --text2: #1b1d24;
+    --text2: #33363f;
     --scrollbar: #111217a9;
     --scrollbar-hover: #1b1d24;
     --btn-secondary-bg: #111217a9;
