--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -27,3 +27,15 @@
         font-size: 16px;
     }
   }
+
+  .fabian {
+    background: -webkit-linear-gradient(right,var(--accent1),var(--accent2));
+    background: linear-gradient(270deg,var(--accent1) 0,var(--accent2));
+    background-size: 350%;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-animation: gradientText 3s ease infinite;
+    animation: gradientText 3s ease infinite;
+    font-weight: 700;
+  }
