:lipstick: New color theme

--- a/src/assets/scss/_var.scss
+++ b/src/assets/scss/_var.scss
@@ -1,6 +1,6 @@
 html {
-    --accent1: #F652A0;
-    --accent2: #36EEE0;
+    --accent1: #005BBB;
+    --accent2: #FFD500;
     --background1: #111217;
     --background2: #15171D;
     --background3: #111217da;
@@ -9,8 +9,8 @@ html {
     --text2: #d1d1d1;
     --scrollbar: #ffffffa9;
     --scrollbar-hover: #F4F6FB;
-    --btn-primary-bg: #F652A0;
-    --btn-primary-shadow: #F652A04d;
+    --btn-primary-bg: #005BBB;
+    --btn-primary-shadow: #005BBB4d;
     --btn-secondary-bg: #ffffffa9;
     --btn-secondary-shadow: #ffffff4d;
 }
@@ -39,10 +39,10 @@ html {
 }
 
 .theme1 {
-    --accent1: #F652A0;
-    --accent2: #36EEE0;
-    --btn-primary-bg: #F652A0;
-    --btn-primary-shadow: #F652A04d;
+    --accent1: #005BBB;
+    --accent2: #FFD500;
+    --btn-primary-bg: #005BBB;
+    --btn-primary-shadow: #005BBB4d;
 }
 
 .theme2 {
