:lipstick: minimal improvements

--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -83,7 +83,7 @@
   align-items: center;
   justify-content: center;
   transition: all 0.3s;
-  color: #F4F6FB;
+  color: var(--text1);
 }
 
 @media screen and (min-width: 900px) {
