--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -10,7 +10,7 @@
 .footer-container {
     font-size: 18px;
     font-weight: 300;
-    color: var(--text2);
+    color: var(--scrollbar);
     transition: all 0.3s;
     width: fit-content;
     text-align: center;
