--- a/src/assets/scss/_about.scss
+++ b/src/assets/scss/_about.scss
@@ -21,6 +21,7 @@
         height: 300px;
         border-radius: 500px;
         margin-right: 100px;
+        background-color: var(--background1);
     }
 
     .about-text {
