--- a/src/assets/scss/_globals.scss
+++ b/src/assets/scss/_globals.scss
@@ -6,7 +6,11 @@ html {
 body {
   background-color: var(--background1);
   color: var(--text1);
-  font-family: 'Poppins', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   user-select: none;
   height: 100%;
 }
