--- a/src/assets/scss/_globals.scss
+++ b/src/assets/scss/_globals.scss
@@ -70,3 +70,15 @@ h2 {
     display: none;
   }
  }
+
+ .hidden {
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: 2s all ease;
+ }
+
+ .show {
+  transform: translateY(0);
+  opacity: 1;
+ }
