--- a/src/assets/scss/_bar.scss
+++ b/src/assets/scss/_bar.scss
@@ -12,6 +12,7 @@
     justify-content: space-between;
     background-color: var(--background3);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 
 .status {
