--- a/src/assets/scss/_nav.scss
+++ b/src/assets/scss/_nav.scss
@@ -17,6 +17,7 @@
   justify-content: space-between;
   background-color: var(--background1);
   backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
 }
 
 .nav-container {
