:lipstick: add border to .popup-item-container

--- a/src/assets/scss/_popup.scss
+++ b/src/assets/scss/_popup.scss
@@ -70,8 +70,8 @@
   }
   
   .popup-item-container {
-    background-color: var(--background2);
-    //border: 1px solid var(--text1);
+    background-color: var(--background3);
+    border: 1px solid var(--text1);
     padding: 1.25rem;
     border-radius: 1.25rem;
     position: relative;
